# ozone_investigation

./: LICENSE  README.md  setup.cfg
ozone_investigation/: calc.py  data_handler.py  file_handler.py  main.py  plot.py
