[metadata]
name = ozone_investigation
author = Alexandra Lehner
author_email =
license =
description = ozone investigation project
long_description_content_type=
long_description =
url =
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
zip_safe = False
packages = find:
include_package_data = True
package_dir =
    = .
setup_requires =
    setuptools_scm
python_requires = >=3.8
install_requires =
    NumPy
    netCDF4
    xarray
    matplotlib
    shapely
    cython
    cartopy

[options.package_data]
* =
    data/*.csv

[options.entry_points]
console_scripts =
  ozone_investigation = ozone_investigation.main:entry_point

